<resources>
    <string name="app_name">رهپوحساب</string>
    <string name="app_title">رهپویان انفورماتیک برتر</string>

    <string name="define_category">تعریف دسته بندی</string>
    <string name="change_category">تغییر دسته بندی</string>
    <string name="calculate_price">محاسبه قیمت</string>
    <string name="source_price">قیمت مرجع</string>
    <string name="settings">تنظیمات</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Settings Fragment -->
    <string name="currency_unit">واحد پولی</string>
    <string name="rial">ریال</string>
    <string name="tooman">تومان</string>
    <string name="company_description">فروش عمده لوازم جانبی کامپیوتر و موبایل</string>
    <string name="contact_us">تماس با ما</string>
    <string name="company_phone">tel:02188832092</string>
    <string name="website">سایت رسمی</string>
    <string name="company_site">http://rahpooyanbartar.com</string>
    <string name="telegram_support">پشتیبانی تلگرام</string>
    <string name="company_telegram">http://t.me/rahpooyanbartarsup</string>



    <!-- Define Category Fragment -->
    <string name="category_name">نام دسته بندی:</string>
    <string name="commission_percent">درصد کمیسیون:</string>
    <string name="process_price">قیمت پردازش:</string>
    <string name="submit">تایید</string>

    <string name="success_defining_category">تعریف دسته بندی با موفقیت انجام شد</string>
    <string name="error_defining_category">تعریف دسته بندی با خطا مواجه شد!</string>
    <string name="error_duplicate_category_name">نام دسته بندی تکراری است!</string>

    <string name="warn_empty_category_name">نام دسته بندی خالی است!</string>
    <string name="warn_empty_commission_percent">درصد کمیسیون خالی است!</string>
    <string name="warn_empty_process_price">قیمت پردازش خالی است!</string>

    <!-- Change Category Fragment -->
    <string name="select_category">انتخاب دسته بندی:</string>
    <string name="change_category_name">تغییر نام دسته بندی:</string>
    <string name="change_commission_percent">تغییر درصد کمیسیون:</string>
    <string name="change_process_price">تغییر هزینه پردازش:</string>
    <string name="edit">ویرایش</string>
    <string name="delete">حذف</string>

    <string name="warn_empty_select_category">دسته بندی انتخاب نشده است!</string>
    <string name="error_deleting_category">حذف دسته بندی با خطا مواجه شد!</string>
    <string name="success_deleting_category">حذف دسته بندی موفقیت آمیز بود</string>
    <string name="error_category_not_found">دسته بندی انتخابی یافت نشد!</string>
    <string name="error_category_not_selected">دسته بندی انتخاب نشده است!</string>
    <string name="warn_empty_category_values">مقادیر دسته بندی خالی است!</string>
    <string name="success_editing_category">دسته بندی با موفقیت ویرایش شد</string>

    <!-- Source Price Fragment -->
    <string name="source_price_q">قیمت مرجع:</string>
    <string name="tolerance_percent">درصد تلرانس:</string>
    <string name="min_allowed_price">حداقل قیمت مجاز:</string>
    <string name="max_allowed_price">حداکثر قیمت مجاز:</string>
    
    <!-- Calculate Price Fragment -->
    <string name="buy_price">قیمت خرید:</string>
    <string name="list_price">قیمت لیست:</string>
    <string name="category">دسته بندی:</string>
    <string name="final_buy_cost">هزینه نهایی خرید:</string>
    <string name="final_list_cost">هزینه نهایی لیست:</string>
    <string name="sell_price">قیمت فروش:</string>
    <string name="net_receive">دریافتی خالص:</string>
    <string name="calculate">محاسبه</string>

    <string name="warn_empty_buy_price">قیمت خرید خالی است!</string>
    <string name="warn_empty_list_price">قیمت لیست خالی است!</string>
    <string name="warn_empty_input_fields">لطفا یکی از فیلدهای ورودی را پر کنید!</string>

</resources>