<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_app_bars"
        android:id="@+id/action_bar"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textSize="@dimen/ts_app_title"
            android:textColor="@color/white"
            android:fontFamily="@font/yekanbakh_bold"
            android:layout_gravity="center" />

    </androidx.appcompat.widget.Toolbar>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_app_bars"
        android:background="@color/blue"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent" >

        <ImageView
            android:layout_width="@dimen/wh_bottom_bar_icons"
            android:layout_height="@dimen/wh_bottom_bar_icons"
            android:id="@+id/change_category"
            android:src="@drawable/ic_change_category"
            android:contentDescription="@string/define_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
        <ImageView
            android:layout_width="@dimen/wh_bottom_bar_icons"
            android:layout_height="@dimen/wh_bottom_bar_icons"
            android:id="@+id/define_category"
            android:src="@drawable/ic_define_category"
            android:contentDescription="@string/define_category"
            app:layout_constraintStart_toEndOf="@id/change_category"
            app:layout_constraintEnd_toStartOf="@id/calculate_price"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:layout_width="@dimen/wh_bottom_bar_icons"
            android:layout_height="@dimen/wh_bottom_bar_icons"
            android:id="@+id/calculate_price"
            android:src="@drawable/ic_calculate_price"
            android:contentDescription="@string/calculate_price"
            app:layout_constraintStart_toEndOf="@id/define_category"
            app:layout_constraintEnd_toStartOf="@id/source_price"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
        <ImageView
            android:layout_width="@dimen/wh_bottom_bar_icons"
            android:layout_height="@dimen/wh_bottom_bar_icons"
            android:id="@+id/source_price"
            android:src="@drawable/ic_source_price"
            android:contentDescription="@string/source_price"
            app:layout_constraintStart_toEndOf="@id/calculate_price"
            app:layout_constraintEnd_toStartOf="@id/settings"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
        <ImageView
            android:layout_width="@dimen/wh_bottom_bar_icons"
            android:layout_height="@dimen/wh_bottom_bar_icons"
            android:id="@+id/settings"
            android:src="@drawable/ic_settings"
            android:contentDescription="@string/settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>