<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/fragment_layout_style"
    tools:context=".DefineCategoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/define_category_tv"
            android:text="@string/define_category"
            android:textSize="@dimen/ts_app_title"
            android:layout_marginTop="@dimen/mg_default"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/category_name_layout"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/mg_default"
            app:layout_constraintTop_toBottomOf="@id/define_category_tv">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/category_name_tv"
                style="@style/input_field_title"
                android:text="@string/category_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/h_input_fields"
                android:id="@+id/category_name_et"
                style="@style/edit_text_style"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/commission_percent_layout"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/mg_default"
            app:layout_constraintTop_toBottomOf="@id/category_name_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/commission_percent_tv"
                style="@style/input_field_title"
                android:text="@string/commission_percent" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/h_input_fields"
                android:id="@+id/commission_percent_et"
                style="@style/edit_text_style"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/process_price_layout"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/mg_default"
            app:layout_constraintTop_toBottomOf="@id/commission_percent_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/process_price_tv"
                style="@style/input_field_title"
                android:text="@string/process_price" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/h_input_fields"
                android:id="@+id/process_price_et"
                style="@style/edit_text_style"
                android:inputType="number" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/h_input_fields"
            android:text="@string/submit"
            android:textSize="@dimen/ts_regular_text"
            android:layout_marginTop="@dimen/mg_top_button"
            android:background="@drawable/bg_buttons"
            android:layout_marginBottom="@dimen/mg_default"
            app:layout_constraintTop_toBottomOf="@id/process_price_layout"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>